[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/menus/BackgroundTilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/menus/main_menu.gd" type="Script" id=2]
[ext_resource path="res://effects/TransitionRect.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/textures/sound_volume_icon.png" type="Texture" id=6]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0
margin_top = 32.0
margin_right = 29.0
margin_bottom = 13.0
text = "FORTUNESWEEPER"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 67.0
margin_top = 17.0
margin_right = 93.0
margin_bottom = 69.0
custom_constants/separation = 0

[node name="StartButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 26.0
margin_bottom = 13.0
text = "Start"

[node name="HelpButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 26.0
margin_bottom = 26.0
text = "Help"

[node name="CreditsButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 26.0
margin_bottom = 39.0
text = "Credits"

[node name="QuitButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 26.0
margin_bottom = 52.0
text = "Quit"

[node name="SoundVolumeSlider" type="HSlider" parent="CanvasLayer"]
margin_left = 17.0
margin_top = 8.0
margin_right = 37.0
margin_bottom = 16.0
step = 10.0
value = 70.0

[node name="Icon" type="TextureRect" parent="CanvasLayer/SoundVolumeSlider"]
margin_left = -9.0
margin_right = -1.0
margin_bottom = 8.0
texture = ExtResource( 6 )

[node name="TransitionRect" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="BackgroundTilemap" parent="." instance=ExtResource( 1 )]
